# pypegen

./: .gitignore  CLAUDE.md  README.md  Ring Vortex Finder.ipt  Ring Vortex Finder.stp  chainable_config.step  composable_pattern.step  cross_fitting.step  cutter_debug.stl  debug_internal_thread.py  gpt_scrtpts.py  nested_tees.step  ocp_vscode_demo.py  output.txt  pipe_1in_sch40_npt_both_ends.stl  pyproject.toml  requirements.txt  simple_tee.step  tmpclaude-0955-cwd  weldolet_branch.step
.claude/: prompt.txt
docs/: step_import_guide.md
examples/: ammonia_in.py  ammonia_out.py  ammonia_out_final.py  api_patterns.py  branching_route.py  export_nested_tee.py  export_reducer.py  hydrogen_out_1.py  hydrogen_out_2.py  hydrogen_out_3.py  longer_example.py  orthographic_drawing.py  pipe_bom_simple.py  sloped_pipe_demo.py  threaded_pipe_run.py
examples/output/: pipe_bom_simple.step
src/pypegen/: pipe_generator.py  pipe_router.py  route_builder.py  route_geometry_builder.py  route_nodes.py
src/pypegen/drawing_generator/: __init__.py  axis_indicator.py  bom.py  constants.py  dimensions.py  drawing.py  drawing_generator.py  layout_engine.py  page.py  title_block.py  view_area.py  view_projection.py
src/pypegen/features/: male_npt.py
src/pypegen/fittings/: __init__.py  butt_weld_elbow.py  butt_weld_elbow_45.py  butt_weld_reducer.py  butt_weld_tee.py  gasket_flat_ring.py  gasket_spiral_wound.py  npt_thread.py  pipe_fittings.py  socket_weld_cross.py  socket_weld_elbow.py  socket_weld_tee.py  threaded_elbow.py  threaded_tee.py  weld_neck_flange.py
src/pypegen/fittings/interactive/: __init__.py  helper_cli.py
src/pypegen/fittings/step_import/: __init__.py  config_schema.py  fitting_loader.py  marker_detector.py
src/pypegen/threads/: npt_female.py  npt_male.py
tests/: test_butt_weld_reducer.py  test_drawing_simple.py  test_gaskets.py  test_npt_threads.py  test_step_import.py  test_threaded_elbow.py
